--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://dimapth.github.io/",
+  "homepage": "http://dimapth.github.io/react-training/",
   "name": "react-training",
   "version": "0.1.0",
   "private": true,
